# convertor

./: Cargo.toml  Dockerfile  justfile  metadata.json
.claude/: launch.json
.convertor/: convertor.cli.toml  convertor.toml
.run/: Run builder.run.xml  Run convd.run.xml  Test convertor.run.xml
crates/builder/: Cargo.toml
crates/builder/src/: args.rs  commands.rs  main.rs
crates/builder/src/args/: arch.rs  common.rs  package.rs  profile.rs  registry.rs  tag.rs  target.rs  version.rs
crates/builder/src/commands/: build.rs  dashboard.rs  image.rs  publish.rs  tag.rs  version.rs
crates/confly/: Cargo.toml
crates/confly/assets/service/: convertor.conf  convertor.rc  convertor.service  mihomo.rc  mihomo.service
crates/confly/src/: command.rs  config.rs  lib.rs  main.rs  model.rs  profile_patcher.rs
crates/confly/src/command/: config_cmd.rs  subscription_cmd.rs
crates/confly/tests/: subscription_test.rs
crates/convd/: Cargo.toml  build.rs
crates/convd/src/: ext.rs  server.rs
crates/convd/src/ext/: watch_debounce.rs
crates/convd/src/server/: app_state.rs  error.rs  extractor.rs  model.rs  openapi.rs  response.rs  router.rs  service.rs
crates/convd/src/server/error/: app_error.rs  request_error.rs  service_error.rs  unknown_error.rs
crates/convd/src/server/extractor/: header.rs  request.rs  scheme.rs
crates/convd/src/server/layer/: trace.rs
crates/convd/src/server/model/: backend_status.rs  url_result.rs
crates/convd/src/server/response/: api_error.rs  api_response.rs  error_mapper.rs  request_body.rs  response_body.rs  response_status.rs  subscription_error.rs
crates/convd/src/server/router/: actuator.rs  api.rs  download.rs  frontend.rs  helper.rs  profile.rs  subscription.rs
crates/convd/src/server/router/api/: subscription.rs
crates/convd/src/server/service/: build_url_service.rs  clash_service.rs  surge_service.rs
crates/convd/tests/: flush_cache_test.rs  openapi_test.rs  profile_test.rs  proxy_provider_test.rs  raw_profile_test.rs  rule_provider_test.rs  server.rs  subscription_test.rs  testkit.rs
crates/convd/tests/snapshots/: profile_test__profile_clash_boslife.snap  profile_test__profile_surge_boslife.snap  proxy_provider_test__proxy_provider_clash_boslife.snap  raw_profile_test__raw_profile_clash_boslife.snap  raw_profile_test__raw_profile_surge_boslife.snap  rule_provider_test__rule_provider_clash_boslife.snap  rule_provider_test__rule_provider_surge_boslife.snap
crates/convertor/: Cargo.toml  clash_profile.yaml  surge_profile.yaml
crates/convertor/src/: common.rs  config.rs  core.rs  error.rs  lib.rs  provider.rs  url.rs
crates/convertor/src/common/: cache.rs  encrypt.rs  extra.rs  redis_handle.rs
crates/convertor/src/common/extra/: box_extra.rs  non_empty_opt_str.rs
crates/convertor/src/config/: redis_config.rs  subscription_config.rs
crates/convertor/src/core/: profile.rs  region.rs  renderer.rs  util.rs
crates/convertor/src/core/parser/: clash_parser.rs  surge_parser.rs
crates/convertor/src/core/profile/: clash_profile.rs  policy.rs  proxy.rs  proxy_group.rs  rule.rs  surge_header.rs  surge_profile.rs
crates/convertor/src/core/profile/clash_profile/: geox_url.rs  provider_type.rs  proxy_provider.rs  rule_provider.rs
crates/convertor/src/core/renderer/: clash_renderer.rs  surge_renderer.rs
crates/convertor/src/error/: config_error.rs  encrypt_error.rs  internal_error.rs  profile_error.rs  provider_error.rs  redis_error.rs  render_error.rs  url_error.rs
crates/convertor/src/url/: conv_query.rs  conv_url.rs  url_builder.rs  url_result.rs
crates/convertor/test-assets/clash/: mock_profile.yaml
crates/convertor/test-assets/surge/: mock_profile.conf
crates/convertor/tests/: encrypt_test.rs  profile_test.rs  serde_qs_test.rs  testkit.rs  url_builder_test.rs
crates/convertor/tests/snapshots/: conv_query_test__parse_surge_conv_query.snap  profile_test__parse_and_render_clash_profile-2.snap  profile_test__parse_and_render_clash_profile.snap  profile_test__parse_and_render_surge_profile-2.snap  profile_test__parse_and_render_surge_profile.snap  profile_test__render_clash_proxy_provider.snap  profile_test__render_clash_rule_provider-2.snap  profile_test__render_clash_rule_provider-3.snap  profile_test__render_clash_rule_provider-4.snap  profile_test__render_clash_rule_provider-5.snap  profile_test__render_clash_rule_provider-6.snap  profile_test__render_clash_rule_provider-7.snap  profile_test__render_clash_rule_provider.snap  profile_test__render_surge_rule_provider-2.snap  profile_test__render_surge_rule_provider-3.snap  profile_test__render_surge_rule_provider-4.snap  profile_test__render_surge_rule_provider-5.snap  profile_test__render_surge_rule_provider-6.snap  profile_test__render_surge_rule_provider-7.snap  profile_test__render_surge_rule_provider.snap  url_builder_test__parse_clash_url-10.snap  url_builder_test__parse_clash_url-2.snap  url_builder_test__parse_clash_url-3.snap  url_builder_test__parse_clash_url-4.snap  url_builder_test__parse_clash_url-5.snap  url_builder_test__parse_clash_url-6.snap  url_builder_test__parse_clash_url-7.snap  url_builder_test__parse_clash_url-8.snap  url_builder_test__parse_clash_url-9.snap  url_builder_test__parse_clash_url.snap  url_builder_test__parse_surge_url-10.snap  url_builder_test__parse_surge_url-2.snap  url_builder_test__parse_surge_url-3.snap  url_builder_test__parse_surge_url-4.snap  url_builder_test__parse_surge_url-5.snap  url_builder_test__parse_surge_url-6.snap  url_builder_test__parse_surge_url-7.snap  url_builder_test__parse_surge_url-8.snap  url_builder_test__parse_surge_url-9.snap  url_builder_test__parse_surge_url.snap  (+1 more)
crates/convertor/tests/testkit/: mod.rs
crates/example/: Cargo.toml
crates/fetcher/: Cargo.toml  README.md
crates/fetcher/src/: client.rs  error.rs  lib.rs  request.rs  response.rs
crates/fetcher/tests/: fetcher_integration_test.rs
dashboard/: angular.json  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json
dashboard-v2/: README.md  angular.json  package.json  pnpm-lock.yaml  proxy.conf.json
(+156 files in other folders)
