[workspace]
resolver = "3"
members = [
    "crates/convd",
    "crates/confly",
    "crates/convertor",
    "crates/builder",
    "crates/example",
]

[workspace.package]
description = "A profile converter for surge/clash."
repository = "https://github.com/convertor-gitops/convertor"
authors = ["BppleMan"]
license = "Apache-2.0"
version = "2.6.16"
edition = "2024"

[workspace.dependencies]
# 本地/工作区包
convertor = { path = "crates/convertor", version = "2.6.12" }

# 异步运行时 & 并发相关
tokio = { version = "1.48.0", default-features = false }
tokio-stream = { version = "0.1.17", default-features = false }
tokio-util = { version = "0.7.17", default-features = false }
futures-util = { version = "0.3.31", default-features = false }
async-trait = { version = "0.1.89", default-features = false }

# 网络/HTTP 客户端与服务端及中间件
axum = { version = "0.8.6", default-features = false }
axum-extra = { version = "0.12.1", default-features = false }
tower = { version = "0.5.2", default-features = false }
tower-http = { version = "0.6.6", default-features = false }
reqwest = { version = "0.12.24", default-features = false }
http-body-util = { version = "0.1.3", default-features = false }
headers = { version = "0.4.1", default-features = false }

# 序列化/反序列化/配置
serde = { version = "1.0.228", default-features = false }
serde_json = { version = "1.0.145", default-features = false }
serde_yaml = { version = "0.9.33", default-features = false }
serde_qs = { version = "1.0.0", default-features = false }
#serde_qs_ext = { version = "0.12.0", default-features = false }
toml = { version = "0.9.8", default-features = false }
jsonpath_lib = { version = "0.3.0", default-features = false }
config = { version = "0.15.18", default-features = false }

# 日志/追踪/遥测
tracing = { version = "0.1.41", default-features = false }
tracing-subscriber = { version = "0.3.20", default-features = false }
tracing-appender = { version = "0.2.3", default-features = false }
tracing-loki = { version = "0.2.6", default-features = false }
tracing-opentelemetry = { version = "0.32.0", default-features = false }
opentelemetry = { version = "0.31.0", default-features = false }
opentelemetry_sdk = { version = "0.31.0", default-features = false }
opentelemetry-otlp = { version = "0.31.0", default-features = false }
axum-prometheus = { version = "0.9.0", default-features = false }
metrics = { version = "0.24.2", default-features = false }

# 加密/哈希/编码
rand_chacha = { version = "0.10.0", default-features = false }
rand_core = { version = "0.10.0", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false }
base64 = { version = "0.22.1", default-features = false }
percent-encoding = { version = "2.3.2", default-features = false }
uuid = { version = "1.18.1", default-features = false }

# 缓存/存储/数据库
redis = { version = "0.32.5", default-features = false }
moka = { version = "0.12.11", default-features = false }

# 工具/解析/匹配/验证
regex = { version = "1.12.2", default-features = false }
console = { version = "0.16.1", default-features = false }
indicatif = { version = "0.18.2", default-features = false }
include_dir = { version = "0.7.4", default-features = true }
clap = { version = "4.5.51", default-features = false }
url = { version = "2.5.7", default-features = false }
chrono = { version = "0.4.42", default-features = false }

# 测试/调试/开发工具
insta = { version = "1.43.2", default-features = false }
httpmock = { version = "0.8.2", default-features = false }
color-eyre = { version = "0.6.5", default-features = false }
anyhow = { version = "1.0.100", default-features = false }
thiserror = { version = "2.0.17", default-features = false }

# MIME 与类型推断
mime = { version = "0.3.17", default-features = false }
mime_guess = { version = "2.0.5", default-features = true }
