[package]
name = "builder"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
color-eyre = { workspace = true }
clap = { workspace = true, features = ["default", "derive", "help", "string"] }
console = { workspace = true, features = ["std"] }
chrono = { workspace = true, features = ["now"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true, features = ["default"] }
