[package]
name = "convd"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
include = [
    "assets/**",
    "src/**",
    "tests/**",
    "build.rs",
    "Cargo.toml",
]

[dependencies]
convertor = { workspace = true }

# 序列化 / 解析
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = { workspace = true, features = ["default_to_form_encoding", "axum"] }

# 日志 / 追踪
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["default", "env-filter", "json", "local-time"] }
tracing-loki = { workspace = true, default-features = false, features = ["rustls", "compat-0-2-1"] }
tracing-opentelemetry = { workspace = true }

# URL / 编码 / 工具
url = { workspace = true, features = ["serde"] }
mime = { workspace = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# HTTP 服务 / 中间件
axum = { workspace = true, features = ["query", "json", "tokio", "http2", "macros"] }
axum-extra = { workspace = true, features = ["typed-header", "scheme", "tracing"] }
tower = { workspace = true, features = [] }
tower-http = { workspace = true, features = ["trace", "fs", "request-id"] }
axum-prometheus = { workspace = true, features = ["prometheus"] }
reqwest = { workspace = true, features = ["http2", "json", "stream", "rustls-tls"] }
headers = { workspace = true }
httpmock = { workspace = true }

# 并发 / 异步 运行时
tokio = { workspace = true, features = ["fs", "rt-multi-thread", "signal", "macros"] }
tokio-util = { workspace = true, features = [] }
futures-util = { workspace = true }

# 缓存 / 存储 / 数据库
moka = { workspace = true, features = ["future"] }
redis = { workspace = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# CLI / 工具 / 键入
clap = { workspace = true, features = ["cargo", "derive", "default"] }

# 其他 / 辅助
mime_guess = { workspace = true }
thiserror = { workspace = true }
include_dir = { workspace = true }
color-eyre = { workspace = true }

[dev-dependencies]
# 测试 / 开发工具
http-body-util = { workspace = true }
#convertor = { workspace = true }
insta = { workspace = true, features = ["json", "default"] }
tower = { workspace = true }
serde_json = { workspace = true }
regex = { workspace = true }

[build-dependencies]
anyhow = { workspace = true }
