[package]
name = "convertor"
description.workspace = true
authors.workspace = true
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# 序列化 / 解析 / 配置
toml = { workspace = true, features = ["parse", "display", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_yml = { workspace = true }
serde_qs = { workspace = true, features = ["default_to_form_encoding"] }

# HTTP 客户端 / 网络
reqwest = { workspace = true, features = ["http2", "json", "stream", "rustls-tls"] }
headers = { workspace = true }

# URL / 编码 / 工具
percent-encoding = { workspace = true }
url = { workspace = true, features = ["serde"] }
regex = { workspace = true, features = ["unicode-perl"] }
uuid = { workspace = true }
getrandom = { workspace = true, features = ["std"] }
blake3 = { workspace = true, features = [] }

# 异步运行时 / 并发
futures-util = { workspace = true }

# 日志 / 追踪 / 遥测（可选 feature）
tracing = { workspace = true, features = ["attributes"] }
tracing-subscriber = { workspace = true, features = ["default", "env-filter", "json", "local-time"] }
tracing-loki = { workspace = true, default-features = false, features = ["rustls", "compat-0-2-1"] }
tracing-opentelemetry = { workspace = true }

# 指标
opentelemetry = { workspace = true, features = ["trace"] }
opentelemetry_sdk = { workspace = true, features = ["trace", "rt-tokio"] }
opentelemetry-otlp = { workspace = true, features = ["trace", "grpc-tonic"] }

# 加密 / 哈希 / 编码
base64 = { workspace = true }
chacha20poly1305 = { workspace = true, features = ["getrandom", "alloc"] }
rand_core = { workspace = true, default-features = true }
rand_chacha = { workspace = true, features = ["default"] }

# 缓存 / 存储 / 数据库
moka = { workspace = true, features = ["future", "logging"] }
redis = { workspace = true, features = ["tokio-rustls-comp", "streams", "connection-manager"] }

# CLI / 工具 / 键入
clap = { workspace = true, features = ["std", "derive"] }
config = { workspace = true, features = ["async", "yaml", "toml"] }

# 错误 / 诊断
thiserror = { workspace = true }

[dev-dependencies]
# 测试工具
insta = { workspace = true, features = ["filters", "yaml"] }
httpmock = { workspace = true, features = ["colored"] }
serde_json = { workspace = true }
color-eyre = { workspace = true }
